<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context="com.fourthlap.settingsscanner.UserPreferencesActivity"
    android:background="@color/background">

    <include
      android:id="@+id/toolbar_user_preferences"
      layout="@layout/toolbar"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="parent"/>

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scrollbars="vertical"
      android:fadeScrollbars="false"
      android:layout_marginTop="55dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/toolbar_user_preferences">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/toolbar_user_preferences">

            <!-- Scanner preferences section -->

            <TextView
              android:id="@+id/preferences_heading"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/standard_margin_top"
              android:fontFamily="sans-serif-black"
              android:text="@string/scanner_settings_heading"
              android:textAlignment="center"
              android:textAppearance="@style/TextAppearance.AppCompat.Headline"
              android:textSize="@dimen/text_size_heading"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toTopOf="@+id/toolbar_user_preferences" />

            <TextView
              android:id="@+id/preferences_sub_heading"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="2dp"
              android:text="@string/scanner_settings_sub_heading"
              android:textAlignment="center"
              android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
              android:textSize="@dimen/text_size_small"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/preferences_heading" />

            <Switch
                android:id="@+id/gps_toggle_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin_top"
                android:text="@string/gps_displayable_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/text_size_large"
                android:background="?android:attr/selectableItemBackground"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/preferences_sub_heading" />

            <include layout="@layout/seaprator"/>

            <Switch
                android:id="@+id/mobile_data_toggle_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin_top"
                android:text="@string/mobile_data_displayable_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/text_size_large"
                android:background="?android:attr/selectableItemBackground"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gps_toggle_button" />

            <include layout="@layout/seaprator"/>

            <Switch
                android:id="@+id/bluetooth_toggle_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin_top"
                android:text="@string/bluetooth_displayable_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/text_size_large"
                android:background="?android:attr/selectableItemBackground"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gps_toggle_button" />

            <include layout="@layout/seaprator"/>

            <Switch
                android:id="@+id/hotspot_toggle_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin_top"
                android:text="@string/hotspot_displayable_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/text_size_large"
                android:background="?android:attr/selectableItemBackground"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gps_toggle_button" />

            <!-- Timer preferences section -->

            <TextView
              android:id="@+id/timer_heading"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/standard_margin_top"
              android:fontFamily="sans-serif-black"
              android:text="@string/timer_settings_heading"
              android:textAlignment="center"
              android:textAppearance="@style/TextAppearance.AppCompat.Headline"
              android:textSize="@dimen/text_size_heading"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/toolbar_user_preferences" />

            <RelativeLayout
              android:id="@+id/sleepHourStartRow"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/standard_margin_top"
              android:orientation="horizontal"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/hotspot_toggle_button">

                <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/sleep_time_start"
                  android:layout_centerVertical="true"
                  android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                  android:textSize="@dimen/text_size_large" />

                <Button
                  android:id="@+id/sleepHourStartButton"
                  android:layout_alignParentRight="true"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="22:00"/>
            </RelativeLayout>

            <include layout="@layout/seaprator"/>

            <RelativeLayout
              android:id="@+id/sleepHourEndRow"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/standard_margin_top"
              android:orientation="horizontal"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/sleepHourStartRow">

                <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerVertical="true"
                  android:text="@string/sleep_time_end"
                  android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                  android:textSize="@dimen/text_size_large" />

                <Button
                  android:id="@+id/sleepHourEndButton"
                  android:layout_alignParentRight="true"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="8:00"/>
            </RelativeLayout>

            <include layout="@layout/seaprator"/>

            <RelativeLayout
              android:id="@+id/frequencySelectorRow"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/standard_margin_top"
              android:orientation="horizontal"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/sleepHourEndRow">

                <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/scan_frequency"
                  android:layout_centerVertical="true"
                  android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                  android:textSize="@dimen/text_size_large" />

                <Button
                  android:id="@+id/frequencySelectorButton"
                  android:layout_alignParentRight="true"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textAllCaps="false"
                  android:text="3"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>